hey, we don't have a problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/old
-spring.datasource.username=old
-spring.datasource.password=old
+spring.datasource.url=jdbc:postgresql://localhost:5432/old1
+spring.datasource.username=old1
+spring.datasource.password=old1
